# dj-auto-sort

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dj-auto-sort.spec  pyproject.toml
.github/workflows/: test.yml
dj_auto_sort/: main.py
dj_auto_sort/adapters/: base.py  rekordbox.py  serato.py  virtualdj.py
dj_auto_sort/analysis/: bpm.py  energy.py  genre.py  key.py
dj_auto_sort/core/: config.py  config_store.py  store.py  track_record.py
dj_auto_sort/organize/: dedup.py  folder_tree.py  metadata_cleaner.py  moves.py
dj_auto_sort/sync/: orchestrator.py
dj_auto_sort/ui/: first_run_dialog.py  main_window.py  preview_view.py  settings_view.py  sync_worker.py
packaging/: build.py  installer.iss
tests/: conftest.py  test_adapter_rekordbox.py  test_adapter_serato.py  test_adapter_virtualdj.py  test_analysis_bpm.py  test_analysis_energy.py  test_analysis_genre.py  test_analysis_key.py  test_config_store.py  test_organize_dedup.py  test_organize_folder_tree.py  test_organize_metadata_cleaner.py  test_organize_moves.py  test_packaging.py  test_smoke.py  test_sync_orchestrator.py  test_ui_error_humanizer.py  test_ui_first_run.py  test_ui_main_window.py  test_ui_preview_view.py  test_ui_settings_view.py  test_ui_sync_worker.py
tests/fixtures/audio/: README.md
