[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-auto-sort"
version = "0.1.0"
description = "Auto-categorize and auto-sort music libraries for Rekordbox, Serato DJ, and Virtual DJ."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "NovaGrid" }]
dependencies = [
    "PySide6>=6.7",
    "mutagen>=1.47",
    "pyrekordbox>=0.4",
    "librosa>=0.10",
    "numpy>=1.26,<2.2",
    "soundfile>=0.12",
    "lxml>=5.1",
]

[project.optional-dependencies]
# Essentia wheels are Windows-fragile. Install explicitly after base install.
analysis-full = [
    "essentia-tensorflow>=2.1b6",
]
# Optional audio fingerprinting for dedup (requires Chromaprint binary on PATH).
fingerprint = [
    "pyacoustid>=1.3",
]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
dj-auto-sort = "dj_auto_sort.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dj_auto_sort*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that run the full audio analysis pipeline",
    "needs_essentia: tests that require the essentia-tensorflow extra",
    "needs_fixtures_audio: tests that require the audio accuracy corpus",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
